--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,11 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\haha0\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\gymnasium\\envs\\registration.py:877: UserWarning: \u001b[33mWARN: `gymnasium.make(..., autoreset=True)` is deprecated and will be removed in v1.0\u001b[0m\n",
+      "  logger.warn(\n"
+     ]
+    }
+   ],
    "source": [
-    "env = gym.make('CliffWalking-v0', render_mode=\"rgb_array\")"
+    "env = gym.make('Kamisado-v0', render_mode=\"rgb_array\")"
    ]
   },
   {
@@ -31,9 +40,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "env = gym.make('Kamisado-v0', render_mode=\"rgb_array\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -52,7 +59,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
